# chess

./: Board.cpp  Board.h  CMakeLists.txt  ChooseDlg.cpp  ChooseDlg.h  MainWnd.cpp  MainWnd.h  NetGame.cpp  NetGame.h  SingleGame.cpp  SingleGame.h  Step.cpp  Step.h  Stone.cpp  Stone.h  main2.cpp
